--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
      <artifactId>jline</artifactId>
      <version>2.12</version>
    </dependency>
+   <dependency>
+     <groupId>junit</groupId>
+     <artifactId>junit</artifactId>
+     <version>4.12</version>
+    </dependency>
   </dependencies>
 
   <repositories>
