--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
       <artifactId>hadoop-client</artifactId>
       <groupId>org.apache.hadoop</groupId>
       <version>2.5.0-cdh5.3.2</version>
+      <scope>provided</scope>
     </dependency>
    <dependency>
      <groupId>jline</groupId>
@@ -64,6 +65,26 @@
           </compilerArgs>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.5.4</version>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+
+        </configuration>
+        <executions>
+          <execution>
+            <id>assemble-all</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+       </executions>
+     </plugin>
     </plugins>
   </build>
 
